mobile view issues corrected

--- a/index.html
+++ b/index.html
@@ -48,95 +48,97 @@
     </section>
 
   <!--team section-->
-  <section class="headings-box">
-      <h2>The Founders</h2>
-  </section> 
-  <section class="team-container" id="wall-of-gains">
-    <div class="card">
+  <div class="team_sec">
+    <section class="headings-box">
+        <h2>The Founders</h2>
+    </section> 
+    <section class="team-container" id="wall-of-gains">
+      <div class="card">
+        <div class="imgbox">
+          <img src="css/images/nk.pfp.jpeg" alt="Nk profile picture">
+          <img src="css/images/nk.pfp.jpeg" alt="Nk 2nd PF"><!--2nd nft pic-->
+        </div>
+          <div class="details">
+            <div class="content">
+              <h3>Nk<br><span>Crypto and NFT enthusiast, does everything from delivering profitable calls on Sol, collabs and building the server with and Amazing spirit!</span></h3>
+              <div class="social-icons">
+                <a class="t-logo-bottom" href="https://twitter.com/nkk_sol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="card">
       <div class="imgbox">
-        <img src="css/images/nk.pfp.jpeg" alt="Nk profile picture">
-        <img src="css/images/nk.pfp.jpeg" alt="Nk 2nd PF"><!--2nd nft pic-->
+        <img src="css/images/chase-pfp.png" alt="Chase profile picture">
+        <img src="css/images/chase-pfp.png" alt="Chase 2nd PF"><!--2nd nft pic-->
       </div>
         <div class="details">
           <div class="content">
-            <h3>Nk<br><span>Crypto and NFT enthusiast, does everything from delivering profitable calls on Sol, collabs and building the server with and Amazing spirit!</span></h3>
+            <h3>Chase<br><span>Chase is a beast, he does this full time. He is on everything from sol and eth nfts, to futures. this guy dont sleep and are always hungry for profit, sharing all the alpha.</span></h3>
             <div class="social-icons">
-              <a class="t-logo-bottom" href="https://twitter.com/nkk_sol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+              <a class="t-logo-bottom" href="https://twitter.com/chasemoney4Iife" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+      <div class="imgbox">
+        <img src="css/images/crypto.chris-pfp.png" alt="CryptoChris profile picture">
+        <img src="css/images/crypto.chris-pfp.png" alt="CryptoChris 2nd PF"><!--2nd nft pic-->
+      </div>
+        <div class="details">
+          <div class="content">
+            <h3>CryptoChris<br><span>Chris works mostly behing the scene, taking care of the tech side of discord and website. Finding collabs and building the communty with a good vibe.</span></h3>
+            <div class="social-icons">
+              <a class="t-logo-bottom" href="https://twitter.com/CryptoChrisSol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="imgbox">
+          <img src="css/images/sim-pfp.png" alt="Sim profile picture">
+          <img src="css/images/sim-pfp.png" alt="Sim 2nd PF"><!--2nd nft pic-->
+        </div>
+        <div class="details">
+          <div class="content">
+            <h3>Sim<br><span>Our beloved discord and collab manager. he makes great collabs and wl giveaways for our members, and are always in chat helping out.</span></h3>
+            <div class="social-icons">
+              <a class="t-logo-bottom" href="https://twitter.com/CryptoSim66" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="css/images/blick-pfp.jpeg" alt="Stayin_Blick profile picture">
+        <img src="css/images/blick-pfp.jpeg" alt="Stayin_Blick 2nd PF"><!--2nd nft pic-->
+      </div>
+        <div class="details">
+          <div class="content">
+            <h3>Stayin_Blick<br><span>Community-Mod living and vibin in chat, helping everyone out when they have questions and showing them around. Also helps out with finding good projects and collabs.</span></h3>
+            <div class="social-icons">
+              <a class="t-logo-bottom" href="https://twitter.com/crypto_blick" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
             </div>
           </div>
         </div>
     </div>
     <div class="card">
-    <div class="imgbox">
-      <img src="css/images/chase-pfp.png" alt="Chase profile picture">
-      <img src="css/images/chase-pfp.png" alt="Chase 2nd PF"><!--2nd nft pic-->
-    </div>
-      <div class="details">
-        <div class="content">
-          <h3>Chase<br><span>Chase is a beast, he does this full time. He is on everything from sol and eth nfts, to futures. this guy dont sleep and are always hungry for profit, sharing all the alpha.</span></h3>
-          <div class="social-icons">
-            <a class="t-logo-bottom" href="https://twitter.com/chasemoney4Iife" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-    <div class="imgbox">
-      <img src="css/images/crypto.chris-pfp.png" alt="CryptoChris profile picture">
-      <img src="css/images/crypto.chris-pfp.png" alt="CryptoChris 2nd PF"><!--2nd nft pic-->
-    </div>
-      <div class="details">
-        <div class="content">
-          <h3>CryptoChris<br><span>Chris works mostly behing the scene, taking care of the tech side of discord and website. Finding collabs and building the communty with a good vibe.</span></h3>
-          <div class="social-icons">
-            <a class="t-logo-bottom" href="https://twitter.com/CryptoChrisSol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card">
       <div class="imgbox">
-        <img src="css/images/sim-pfp.png" alt="Sim profile picture">
-        <img src="css/images/sim-pfp.png" alt="Sim 2nd PF"><!--2nd nft pic-->
+        <img src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr profile picture">
+        <img src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr 2nd PF"><!--2nd nft pic-->
       </div>
-      <div class="details">
-        <div class="content">
-          <h3>Sim<br><span>Our beloved discord and collab manager. he makes great collabs and wl giveaways for our members, and are always in chat helping out.</span></h3>
-          <div class="social-icons">
-            <a class="t-logo-bottom" href="https://twitter.com/CryptoSim66" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+        <div class="details">
+          <div class="content">
+            <h3>CyberWolfgr<br><span>Community-Mod with a lot of experience with crypto, now having a great interest in NFTs aswell. has his own channel with crazy amount of free books and usefull content.</span></h3>
+            <div class="social-icons">
+              <a class="t-logo-bottom" href="https://twitter.com/CyberWolf_gr" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+            </div>
           </div>
         </div>
-      </div>
     </div>
-  <div class="card">
-    <div class="imgbox">
-      <img src="css/images/blick-pfp.jpeg" alt="Stayin_Blick profile picture">
-      <img src="css/images/blick-pfp.jpeg" alt="Stayin_Blick 2nd PF"><!--2nd nft pic-->
-    </div>
-      <div class="details">
-        <div class="content">
-          <h3>Stayin_Blick<br><span>Community-Mod living and vibin in chat, helping everyone out when they have questions and showing them around. Also helps out with finding good projects and collabs.</span></h3>
-          <div class="social-icons">
-            <a class="t-logo-bottom" href="https://twitter.com/crypto_blick" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-          </div>
-        </div>
-      </div>
+    </section>
   </div>
-  <div class="card">
-    <div class="imgbox">
-      <img src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr profile picture">
-      <img src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr 2nd PF"><!--2nd nft pic-->
-    </div>
-      <div class="details">
-        <div class="content">
-          <h3>CyberWolfgr<br><span>Community-Mod with a lot of experience with crypto, now having a great interest in NFTs aswell. has his own channel with crazy amount of free books and usefull content.</span></h3>
-          <div class="social-icons">
-            <a class="t-logo-bottom" href="https://twitter.com/CyberWolf_gr" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-          </div>
-        </div>
-      </div>
-  </div>
-  </section>
   <!--Callers-->
 <section class="profit-container">
   <div class="heaading-box">
@@ -195,85 +197,86 @@
 </section>
 
 <!--profits-->
-<section class="section-pics">
-  <header class="profit-pic-header">
-    <h2>Profits</h2>
-    <p>
-      Here's an exmaple of the profits our callers have made for the community, etherum,solana, futures and sports bets. Theres more profit being made each day make sure you dont miss out !! 
-    </p>
-  </header>
-  <div class="picture-container-1">
-    <div class="slider">
-      <div class="slide-track">
-
-        <div class="slide">
-          <img class="profit-image-1" alt="solana NFT profit" src="/css/images/solana_profit.PNG">
+<section class="profit_sec">
+  <section class="section-pics">
+    <header class="profit-pic-header">
+      <h2>Profits</h2>
+      <p>
+        Here's an exmaple of the profits our callers have made for the community, etherum,solana, futures and sports bets. Theres more profit being made each day make sure you dont miss out !! 
+      </p>
+    </header>
+    <div class="picture-container-1">
+      <div class="slider">
+        <div class="slide-track">
+          <div class="slide">
+            <img class="profit-image-1" alt="solana NFT profit" src="/css/images/solana_profit.PNG">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="solana NFT profit" src="/css/images/sol-nft-profit-3.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="solana NFT profit" src="/css/images/solana_profit_2.PNG">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="Futures profit" src="/css/images/futues-profit-1.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-2.jpg">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-3.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-4.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-1.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-2.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-3.png">
+          </div>
+          <!--pics repeated-->
+          <div class="slide">
+            <img class="profit-image-1" alt="solana NFT profit" src="/css/images/solana_profit.PNG">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="solana NFT profit" src="/css/images/sol-nft-profit-3.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="solana NFT profit" src="/css/images/solana_profit_2.PNG">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="Futures profit" src="/css/images/futues-profit-1.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-2.jpg">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-3.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-4.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-1.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-2.png">
+          </div>
+          <div class="slide">
+            <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-3.png">
+          </div>
         </div>
-        <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="/css/images/sol-nft-profit-3.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="/css/images/solana_profit_2.PNG">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="/css/images/futues-profit-1.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-2.jpg">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-3.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-4.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-1.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-2.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-3.png">
-        </div>
-        <!--pics repeated-->
-        <div class="slide">
-          <img class="profit-image-1" alt="solana NFT profit" src="/css/images/solana_profit.PNG">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="/css/images/sol-nft-profit-3.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="/css/images/solana_profit_2.PNG">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="/css/images/futues-profit-1.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-2.jpg">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-3.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-4.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-1.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-2.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-3.png">
-        </div>
-      </div>
+  </section>
 </section>
 <!--education-->
 <section class = "education-wrapper" id="Education">
