--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class = "intro-content-box">
               <h2>Who are we, what are we doing in this space...</h2>
               <p>
-                We are an Alpha group based on discord, we provide Education on Solana & Ethereum NFTs, as well as trading Futures. We have dedicated team  to help bring profits to our community. among the team we have years of experience in bull markets and bear markets. weve even brought in sport bets callers due to meta changes and hes killing it approx. 64% win raate this current month. join our discord to find to see the profits we are making.
+                We are an Alpha group based on discord, we provide Education on Solana & Ethereum NFTs, as well as trading Futures. We have dedicated team  to help bring profits to our community. among the team we have years of experience in bull markets and bear markets. weve even brought in sport bets callers due to meta changes and hes killing it approx. 64% win rate this current month. join our discord to find to see the profits we are making.
               </p>  
             </div>
             <div class="logo-div">
